# Markov-Chain

./: CMakeLists.txt  README  TestIO_1.arg  TestIO_1.stdout  TestIO_2.arg  TestIO_2.in  TestIO_2.stdout  TestIO_3.arg  TestIO_3.stdout  TestIO_4.arg  TestIO_4.stdout  linked_list.c  linked_list.h  makefile  markov_chain.c  markov_chain.h  snakes_and_ladders.c  tweets_generator  tweets_generator.c
